<resources>
    <string name="app_name">MHW Secondhand Clothing</string>
    <string name="Settings">Settings</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>

    //@string resources for Register and Login
    <string name="tvWelcome">Welcome to MHW Secondhand Clothing</string>
    <string name="tvWelcome2">Your favorite shopping place</string>
    <string name="tvWelcome3">Please register or login below</string>
    <string name="tvLogin">Please login</string>
    <string name="tvRegister">Please register</string>
    <string name="etxtName">Enter name</string>
    <string name="etxtEmail">Enter email</string>
    <string name="etxtPassword">Enter password</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegisterHere">Register here</string>
    <string name="btnLoginHere">Login here</string>

    //@string resources for HomeFragment
    <string name="tvWelcomeText">We strive to provide you with the best and most sufficient shopping experience</string>

    //@string resources for InfoFragment
    <string name="tvAbout">About MHW Secondhand Clothing</string>
    <string name="tvAbout2">We were was founded in 2015</string>
    <string name="tvAbout3">Based in Denmark we value sustainability, fashion and reusability</string>
    <string name="tvAbout4">Our customers love us!</string>
    <string name="tvContact">Contact us at:</string>
    <string name="tvContactEmail">Email: mhw@clothing.com</string>
    <string name="tvContactPhone">Phone: +45 8280 1137</string>

    //@string resources for JobsFragment
    <string name="tvJobs">Looking for a new job?</string>
    <string name="tvJobs2">Unfortunately, we do not have any available positions at the moment</string>
    <string name="tvJobs3">However, you are more than welcome to send us an unsolicited application at: mhwjob@clothing.com</string>

    //@string resources for option menu
    <string name="option_home">Home</string>
    <string name="option_products">Products</string>
    <string name="option_search">Search</string>
    <string name="option_settings">Settings</string>
    <string name="option_logout">Log out</string>

    //@string resources for bottom navigation bar
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_job">Jobs</string>
    <string name="nav_bar_info">Info</string>

    //@string resources for Settings
    <string name="tvSettings">Change your user information here</string>
    <string name="editTxtChangeName">Enter new name</string>
    <string name="editTxtChangePhone">Enter new phone number</string>
    <string name="editTxtChangeAddress">Enter new address</string>
    <string name="btnSaveInfo">Save new user information</string>

    //@string resources for Items
    <string name="item1">Shoes (42) - 299dkk          Tlf: 22091299</string>

</resources>